src/kuard/kuard-7df6cd7cdb-l4qkf.Pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    cni.projectcalico.org/containerID: 01d9981a9786de88075bd5b7d518a04f52276765ad84a142ca77e4de7a67001d
    cni.projectcalico.org/podIP: 10.244.77.176/32
    cni.projectcalico.org/podIPs: 10.244.77.176/32
    kubectl.kubernetes.io/restartedAt: "2025-08-19T22:53:45-05:00"
  creationTimestamp: "2025-09-29T16:59:51Z"
  generateName: kuard-7df6cd7cdb-
  labels:
    app: kuard
    pod-template-hash: 7df6cd7cdb
  name: kuard-7df6cd7cdb-l4qkf
  namespace: default
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: kuard-7df6cd7cdb
    uid: d17fa08b-eae3-4bdd-a989-2159415b9ffc
  resourceVersion: "8316984"
  uid: 7b005e6f-63c3-4ea4-9772-8ae5c3b230e1
spec:
  containers:
  - image: gcr.io/kuar-demo/kuard-amd64:blue
    imagePullPolicy: IfNotPresent
    name: kuard-amd64
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-bghf8
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: master-node
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: kube-api-access-bghf8
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
      - configMap:
          items:
          - key: ca.crt
            path: ca.crt
          name: kube-root-ca.crt
      - downwardAPI:
          items:
          - fieldRef:
              apiVersion: v1
              fieldPath: metadata.namespace
            path: namespace
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: "2025-09-29T16:59:51Z"
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: "2025-09-29T17:22:19Z"
    status: "True"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: "2025-09-29T17:22:19Z"
    status: "True"
    type: ContainersReady
  - lastProbeTime: null
    lastTransitionTime: "2025-09-29T16:59:51Z"
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: containerd://3e495520f37b7d8e7ed1170570e14c2d903d21f3ea1543b48c4758685bea1ba6
    image: gcr.io/kuar-demo/kuard-amd64:blue
    imageID: gcr.io/kuar-demo/kuard-amd64@sha256:1ecc9fb2c871302fdb57a25e0c076311b7b352b0a9246d442940ca8fb4efe229
    lastState: {}
    name: kuard-amd64
    ready: true
    restartCount: 0
    started: true
    state:
      running:
        startedAt: "2025-09-29T17:22:19Z"
  hostIP: 192.168.0.136
  phase: Running
  podIP: 10.244.77.176
  podIPs:
  - ip: 10.244.77.176
  qosClass: BestEffort
  startTime: "2025-09-29T16:59:51Z"
