src/kuard/kuard.Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kuard
  namespace: default
  uid: 48dc1cfe-5c9a-4e6b-901d-b5101a6c1481
  resourceVersion: '9885478'
  generation: 1
  creationTimestamp: '2025-10-08T16:09:36Z'
  labels:
    app: kuard
    k8slens-edit-resource-version: v1
  annotations:
    deployment.kubernetes.io/revision: '1'
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{"deployment.kubernetes.io/revision":"2"},"creationTimestamp":"2025-08-13T20:50:09Z","generation":2,"labels":{"app":"kuard"},"name":"kuard","namespace":"default","resourceVersion":"5096337","selfLink":"/apis/apps/v1/namespaces/default/deployments/kuard","uid":"6d4e598b-b327-4fa7-88f9-5f17f4eaeb60"},"spec":{"progressDeadlineSeconds":600,"replicas":1,"revisionHistoryLimit":10,"selector":{"matchLabels":{"app":"kuard"}},"str [...]
      \"kuard-7df6cd7cdb\" has successfully
      progressed.","reason":"NewReplicaSetAvailable","status":"True","type":"Progressing"},{"lastTransitionTime":"2025-09-11T09:23:16Z","lastUpdateTime":"2025-09-11T09:23:16Z","message":"Deployment
      has minimum
      availability.","reason":"MinimumReplicasAvailable","status":"True","type":"Available"}],"observedGeneration":2,"readyReplicas":1,"replicas":1,"updatedReplicas":1}}
  selfLink: /apis/apps/v1/namespaces/default/deployments/kuard
status:
  observedGeneration: 1
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2025-10-08T16:09:38Z'
      lastTransitionTime: '2025-10-08T16:09:36Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "kuard-57d79b5b99" has successfully progressed.
    - type: Available
      status: 'True'
      lastUpdateTime: '2025-10-08T19:06:09Z'
      lastTransitionTime: '2025-10-08T19:06:09Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kuard
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kuard
      annotations:
        kubectl.kubernetes.io/restartedAt: '2025-08-19T22:53:45-05:00'
    spec:
      containers:
        - name: kuard-amd64
          image: gcr.io/kuar-demo/kuard-amd64:blue
          resources:
            limits:
              cpu: '1'
              memory: 256Mi
            requests:
              cpu: 500m
              memory: 128Mi
          livenessProbe:
            httpGet:
              path: /healthy
              port: 8080
            initialDelaySeconds: 5
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 30
            timeoutSeconds: 1
            periodSeconds: 10
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
